--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -1,3 +1,5 @@
+@import '../../../variables';
+
 .contact {
   min-height: 100vh;
   width: 100vw;
@@ -9,5 +11,15 @@
     margin: 0;
     padding-left: 5px;
     //padding-top: 10px;
+  }
+
+  .mat-display-1 {
+    margin: 0;
+    margin-bottom: 15px;
+  }
+
+  hr {
+    border: 2px solid $brand-color-red;
+    width: 100%;
   }
 }
